# lies

./: .travis.yml  Readme.md
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/example-console/: Cargo.toml
crates/example-console/src/: main.rs
crates/lies/: Cargo.toml
crates/lies-impl/: Cargo.toml
crates/lies-impl/src/: lib.rs
crates/lies-impl/templates/: about.ansi.hbs  about.console.hbs  about.html.div.hbs  about.html.page.hbs
crates/lies/src/: lib.rs
scripts/: build.cmd  publish.cmd
