# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "lies-impl"
version = "0.0.1"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "LIcense Embedding System (Implementation Details)"
repository = "https://github.com/MaulingMonkey/lies"
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/templates/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE"]

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
quote           = "1.0" # already depended upon by proc-macr-hack 0.5.11
cargo_metadata  = "0.8"

[features]
about-per-crate     = []
about-per-workspace = []
